# contextbudget

./: brief.md  deploy-log.md  status.json
api/: .env.example  Dockerfile  db.py  main.py  models.py  requirements.txt
content/: calendar.csv  communities.md  github-readme.md
content/blog/: 01-what-happens-when-context-fills-up.md  02-claude-code-vs-gemini-cli-vs-codex.md  03-hidden-cost-of-large-system-prompts.md  04-how-to-track-token-usage-across-providers.md
content/hn/: show-hn-launch.md
content/linkedin/: launch-post.md
content/reddit/: r-chatgptcoding-launch.md  r-claudeai-launch.md  r-localllama-launch.md
content/twitter/: launch-thread.md
sdk/npm/: README.md  package-lock.json  package.json  tsconfig.json
sdk/npm/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/contextbudget/: __init__.py  wrapper.py
site/: ads.txt  index.html
